--- a/Login.html
+++ b/Login.html
@@ -90,6 +90,24 @@
             <input type="submit" class="btn btn-primary" />
         </form>
     </div>
+    <br>
+    <hr/>
+    <br>
+    <div class="row">
+        <div class="col-4" style="text-align: center; font-family: 'Yanone Kaffeesatz', sans-serif;">
+            <img alt="Responsive image" class="img-fluid article" src="essex-outlined_3.png">
+            <br>
+            <h3>Cincinnati’s most diverse collection of talent under one roof!</h3>
+        </div>
+        <div class="col-4 social" style="text-align: center;">
+            <a target="_blank" href="https://www.facebook.com/essxstudios/"><img style="width:40px;" src="facebook.png"></a>
+            <a target="_blank" href="https://twitter.com/EssexStudios"><img style="width:40px;" src="twitter.png"></a>
+            <a target="_blank" href="https://www.instagram.com/essexstudios/"><img style="width:40px;" src="instagram.png"></a>
+        </div>
+        <div class="col-4" style="text-align:right; font-family: 'Yanone Kaffeesatz', sans-serif; font-size:20px">
+            <b>​Trent Heimann, Building Owner</b><br> 2511 Essex Place, #114<br> Cincinnati, Ohio 45206<br> Phone: 513-476-2170<br> Email: <a href="mailto: EssexStudio@aol.com">EssexStudio@aol.com</a>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
