Fixed links in Nav Bar

--- a/Press_Essex.html
+++ b/Press_Essex.html
@@ -97,11 +97,11 @@
 
         <ul>
             <li><a href="#">HOME</a></li>
-            <li><a href="#">ARTWALKS</a></li>
-            <li><a href="#">ARTISTS</a></li>
-            <li><a href="#">PRESS</a></li>
+            <li><a href="Essex_ArtWalks.html">ARTWALKS</a></li>
+            <li><a href="artistspage.html">ARTISTS</a></li>
+            <li><a href="Press_Essex.html">PRESS</a></li>
             <li><a href="#">ABOUT</a></li>
-            <li><a href="#">LOGIN</a></li>
+            <li><a href="Login.html">LOGIN</a></li>
         </ul>
 
     </nav>
