changed social media symbols to closer to website symbols

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="col-2">
             <a href="https://www.facebook.com/essxstudios/"><img class="col-4" src="facebook.png"></a>
             <a href="https://twitter.com/EssexStudios"><img class="col-3" src="twitter.png"></a>
-            <a href="https://www.instagram.com/essexstudios/"><img class="col-4" src="social.png"></a>
+            <a href="https://www.instagram.com/essexstudios/"><img class="col-4" src="instagram.png"></a>
         </div>
         <div class="col-5">
         </div>
