--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
     <div class="row">
         <div class="col-5">
         </div>
-        <div class="col-2">
-            <a href="https://www.facebook.com/essxstudios/"><img class="col-4" src="facebook.png"></a>
+        <div class="col-2" style="align-items: center;">
+            <a href="https://www.facebook.com/essxstudios/"><img class="col-3" src="facebook.png"></a>
             <a href="https://twitter.com/EssexStudios"><img class="col-3" src="twitter.png"></a>
-            <a href="https://www.instagram.com/essexstudios/"><img class="col-4" src="instagram.png"></a>
+            <a href="https://www.instagram.com/essexstudios/"><img class="col-3" src="instagram.png"></a>
         </div>
         <div class="col-5">
         </div>
