--- a/Essex_ArtWalks.html
+++ b/Essex_ArtWalks.html
@@ -178,12 +178,12 @@
         <h1>The Essex Studios</h1>
 
         <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="Essex_ArtWalks.html">ARTWALKS</a></li>
-            <li><a href="artistspage.html">ARTISTS</a></li>
-            <li><a href="Press_Essex.html">PRESS</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="Login.html">LOGIN</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="index.html">HOME</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="Essex_ArtWalks.html">ARTWALKS</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="artistspage.html">ARTISTS</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="Press_Essex.html">PRESS</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="About.html">ABOUT</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="Login.html">LOGIN</a></li>
         </ul>
 
     </nav>
@@ -217,7 +217,7 @@
         <hr>
         <div class="photoform">
             <div class="mspic">
-                <image src="https://theessexstudios.weebly.com/uploads/1/1/7/1/117156051/editor/images-3_4.jpg?1516896643"></image>
+                <image src="paint.jpg"></image>
             </div>
             <div class="registration">
                 Do you or someone you know want to participate as a guest artist at one of our ArtWalks?<br> Please use the button below to be taken to our registration page:<br><br>
@@ -245,11 +245,12 @@
                 <b>​Trent Heimann, Building Owner</b><br> 2511 Essex Place, #114<br> Cincinnati, Ohio 45206<br> Phone: 513-476-2170<br> Email: <a href="mailto: EssexStudio@aol.com">EssexStudio@aol.com</a>
             </div>
         </div>
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
