--- a/artistspage.html
+++ b/artistspage.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Poppins|Yanone+Kaffeesatz&display=swap" rel="stylesheet">
 
-    <title>Artists</title>
+    <title>Artists - The Essex Studios</title>
 
     <style>
         @font-face {
@@ -94,6 +94,10 @@
             color: #5779EA;
             text-decoration: none;
         }
+        
+        .social a:hover {
+            opacity: 0.8;
+        }
     </style>
 
 </head>
@@ -106,12 +110,12 @@
         <h1>The Essex Studios</h1>
 
         <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">ARTWALKS</a></li>
-            <li><a href="#">ARTISTS</a></li>
-            <li><a href="#">PRESS</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">LOGIN</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="index.html">HOME</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="Essex_ArtWalks.html">ARTWALKS</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="artistspage.html">ARTISTS</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="Press_Essex.html">PRESS</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="About.html">ABOUT</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="Login.html">LOGIN</a></li>
         </ul>
 
     </nav>
