--- a/Login.html
+++ b/Login.html
@@ -74,12 +74,12 @@
         <h1>The Essex Studios</h1>
 
         <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="Essex_ArtWalks.html">ARTWALKS</a></li>
-            <li><a href="artistspage.html">ARTISTS</a></li>
-            <li><a href="Press_Essex.html">PRESS</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="Login.html">LOGIN</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="index.html">HOME</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="Essex_ArtWalks.html">ARTWALKS</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="artistspage.html">ARTISTS</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="Press_Essex.html">PRESS</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="About.html">ABOUT</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="Login.html">LOGIN</a></li>
         </ul>
     </nav>
     <div class="container fluid">
@@ -113,6 +113,7 @@
             </div>
         </div>
     </div>
+    <br>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
