--- a/Press_Essex.html
+++ b/Press_Essex.html
@@ -96,12 +96,12 @@
         <h1>The Essex Studios</h1>
 
         <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="Essex_ArtWalks.html">ARTWALKS</a></li>
-            <li><a href="artistspage.html">ARTISTS</a></li>
-            <li><a href="Press_Essex.html">PRESS</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="Login.html">LOGIN</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="index.html">HOME</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="Essex_ArtWalks.html">ARTWALKS</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="artistspage.html">ARTISTS</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="Press_Essex.html">PRESS</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="About.html">ABOUT</a></li>
+            <li style="font-family: 'Yanone Kaffeesatz', sans-serif;font-size: 35px;"><a href="Login.html">LOGIN</a></li>
         </ul>
 
     </nav>
@@ -169,7 +169,7 @@
             </div>
         </div>
     </div>
-
+    <br>
 
 
 
